--- a/app/src/main/res/layout/item_view_person.xml
+++ b/app/src/main/res/layout/item_view_person.xml
@@ -59,27 +59,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/settingsNameTv"
                 tools:text="0791278088" />
 
-            <TextView
-                android:id="@+id/expenseLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/roboto_light"
-                android:text="TargetExpense"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/targetAmtItemView"
-                app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
                 android:id="@+id/targetAmtItemView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_light"
-                android:text="0.0"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="100" />
+                tools:text="Target Expense 100" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
