--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -62,6 +62,9 @@
         tools:layout="@layout/fragment_person_detail" >
         <argument android:name="name"
             app:argType="string" />
+        <action
+            android:id="@+id/action_personDetailFragment_to_classifyFragment"
+            app:destination="@id/classifyFragment" />
     </fragment>
     <fragment
         android:id="@+id/classifyFragment"
