--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,6 +39,7 @@
                         android:fontFamily="@font/roboto_black"
                         android:textColor="@color/white"
                         android:textSize="72sp"
+                        android:text="@{String.valueOf(homeViewModel.weekExpense)}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -105,7 +106,7 @@
                                 android:layout_height="0dp"
                                 android:layout_marginTop="8dp"
                                 android:fontFamily="@font/roboto_black"
-                                android:text="@{homeViewModel.monthExpenditure}"
+                                android:text="@{String.valueOf(homeViewModel.monthExpenditure)}"
                                 android:textColor="@color/indigo"
                                 android:textSize="24sp"
                                 app:layout_constraintEnd_toEndOf="@+id/expenditureLabel"
@@ -120,7 +121,7 @@
                                 android:fontFamily="@font/roboto_black"
                                 android:textColor="@color/indigo"
                                 android:textSize="24sp"
-                                android:text="@{homeViewModel.monthIncome}"
+                                android:text="@{String.valueOf(homeViewModel.monthIncome)}"
                                 app:layout_constraintEnd_toEndOf="@+id/incomeLabel"
                                 app:layout_constraintStart_toStartOf="@+id/incomeLabel"
                                 app:layout_constraintTop_toTopOf="@+id/expenditureAmount"
