--- a/app/src/main/res/layout/exp_inc_summary_fragment.xml
+++ b/app/src/main/res/layout/exp_inc_summary_fragment.xml
@@ -69,6 +69,7 @@
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewIncome" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSummary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
