--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,19 @@
         <item name="cornerSizeBottomRight">16dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
     </style>
+    <style name="TextAppearance.CustomHeadline6" parent="TextAppearance.MaterialComponents.Headline6">
+<!--        <item name="android:textSize">12sp</item>-->
+<!--        <item name="android:textColor">@android:color/secondary_text_material_light</item>-->
+<!--        <item name="fontFamily">@font/roboto_bold</item>-->
+<!--        <item name="textAppearanceHeadline6">@style/TextAppearance.CustomHeadline6</item>-->
+    </style>
+    <style name="TextAppearance.CustomMedium" parent="TextAppearance.AppCompat.Medium">
+        <item name="fontFamily">@font/roboto</item>
+    </style>
+    <style name="TextAppearance.CustomSmall" parent="TextAppearance.AppCompat.Small">
+        <item name="fontFamily">@font/roboto</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 
     <style name="CustomCardView" parent="@style/CardView">
         <item name="backgroundTint">#00ff00</item>
