--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,9 @@
         <item name="colorSecondaryVariant">@color/indigo</item>
         <item name="colorOnSecondary">@color/black</item>
 
+<!--        <item name="android:fontFamily">@font/roboto</item>-->
+<!--        <item name="fontFamily">@font/roboto</item>-->
+
     </style>
 
 </resources>
